Address various issues with export to script